--- a/public/templates/career.html
+++ b/public/templates/career.html
@@ -21,41 +21,21 @@
 <body>
 <!--header-->
 <header class="navbar navbar-inverse" role="banner">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <a href="/" class="navbar-brand navbar-brand-img">
-                                 <img src="../themes/landing/img/logo.png" alt="Logo">
-                            </a>
-                            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="sr-only">Toggle navigation</span>
-                                <i class="fa fa-bars"></i>
-                            </button>
-                        </div>
-
-                        <nav class="collapse navbar-collapse" role="navigation">
-                            <ul class="nav navbar-nav navbar-right mainnav-menu">
-                                <li {@eq key="/" value="{url}"}class="active"{/eq}>
-                                    <a href="/">Home</a>
-                                </li>
-                                <li {@eq key="/features" value="{url}"}class="active"{/eq}>
-                                    <a href="/features">Features</a>
-                                </li>
-                                <li {@eq key="/faq" value="{url}"}class="active"{/eq}>
-                                    <a href="/faq">FAQ</a>
-                                </li>
-                                <li {@eq key="/pricing" value="{url}"}class="active"{/eq}>
-                                    <a href="/pricing">Pricing</a>
-                                </li>   
-                              
-                                <li {@eq key="/login" value="{url}"}class="active"{/eq}>
-                                    <a href="/login">Log In</a>
-                                </li>
-                            </ul>
-
-                        
-                        </nav>
-                    </div>
-                </header>
+  <div class="container">
+    <div class="navbar-header"> <a href="/" class="navbar-brand navbar-brand-img"> <img src="../themes/landing/img/logo.png" alt="Logo"> </a>
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <i class="fa fa-bars"></i> </button>
+    </div>
+    <nav class="collapse navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav navbar-right mainnav-menu">
+        <li {@eq key="/" value="{url}"}class="active"{/eq}> <a href="/">Home</a> </li>
+        <li {@eq key="/features" value="{url}"}class="active"{/eq}> <a href="/features">Features</a> </li>
+        <li {@eq key="/faq" value="{url}"}class="active"{/eq}> <a href="/faq">FAQ</a> </li>
+        <li {@eq key="/pricing" value="{url}"}class="active"{/eq}> <a href="/pricing">Pricing</a> </li>
+        <li {@eq key="/login" value="{url}"}class="active"{/eq}> <a href="/login">Sign In</a> </li>
+      </ul>
+    </nav>
+  </div>
+</header>
 <!--end header-->
 
   <div class="why-choose360notion-bg">
@@ -184,22 +164,15 @@
   </div>
    </div>
     <!--footer-->
-    
-         <footer class="footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h4 class="title-size text-center">
-                               About Us
-                            </h4>
-                            <p class="About-Us text-footer text-center">        <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part. 
-                            To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon "></i>
-                            <small class="help-block text-center text-footer">
-                                -Joel Goslar, Founder and CEO
-                            </small> </p>
-                        </div>
-
-                        <div class="col-sm-3">
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3">
+        <h4 class="title-size text-center"> About Us </h4>
+        <p class="About-Us text-footer text-center"> <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part. 
+          To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon "></i> <small class="help-block text-center text-footer"> -Joel Goslar, Founder and CEO </small> </p>
+      </div>
+      <div class="col-sm-3">
         <h4 class="title-size text-center"> Stay Connected </h4>
         <br>
         <ul class="footer-social-link text-footer text-center">
@@ -225,79 +198,47 @@
                                         data-placement="bottom"> <i class="fa fa-tumblr"></i> </a> </li>
         </ul>
       </div>
-                        <div class="col-sm-3">
-                            <h4 class="title-size text-center">
-                              Stay Updated
-                            </h4>
-
-                            <div class="subscribe-form text-footer text-center">
-                                <p >Get emails about new features and future updates.</p>
-
-                                <form id="subscribe_form" action="/subscribe" method="POST" class="form" role="form">
-                                    <fieldset>
-                                        <div class="form-group text-center">
-                                            <input type="text"
+      <div class="col-sm-3">
+        <h4 class="title-size text-center"> Stay Updated </h4>
+        <div class="subscribe-form text-footer text-center">
+          <p >Get emails about new features and future updates.</p>
+          <form id="subscribe_form" action="/subscribe" method="POST" class="form" role="form">
+            <fieldset>
+              <div class="form-group text-center">
+                <input type="text"
                                                 class="form-control validate[required,custom[email]]"
                                                 id="newsletter_email"
                                                 name="newsletter_email"
                                                 placeholder="Email Address">
-                                        </div>
+              </div>
+              <div class="form-group text-center">
+                <button type="submit" class="btn btn-transparent">Notify me</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+        <p class="subscribe-thanks"> Thanks for subscribing! </p>
+      </div>
+      <div class="col-sm-3 text-footer text-center">
+        <h4 class="title-size text-center"> Get In Touch </h4>
+        <p> 1201 Orange St Ste 600 <br>
+          Wilmington, DE 19801 </p
 
-                                        <div class="form-group text-center">
-                                            <button type="submit" class="btn btn-transparent">Notify me</button>
-                                        </div>
-                                    </fieldset>
-                                </form>
-                            </div>
-
-                            <p class="subscribe-thanks">
-                                Thanks for subscribing!
-                            </p>
-                        </div>
-
-
-                        <div class="col-sm-3 text-footer text-center">
-                            <h4 class="title-size text-center">
-                               Get In Touch
-                            </h4>
-
-                            
-                                <p>
-                                    
-                                    1201 Orange St Ste 600 <br>
-                                    Wilmington, DE 19801
-                                </p
-
-                                ><p>
-                                 
-                                    +1 302-415-1226
-                                </p>
-
-                                <p>
-                               
-                                    <a href="mailto:admin@myabuy.com" class="footer-link">admin@myabuy.com</a>
-                                </p>
-                          
-                        </div>
-                    </div>
-                </div>
-            </footer>
-
-
-        <footer class="copyright-new">
-            <div class="container">
-                 <div class="row">
-                    <div class="col-sm-6">
-                         <a class="footer-link" href="mailto:admin@myabuy.com">Careers </a>&nbsp;|&nbsp;<a href="#" class="footer-link" >Terms of Service</a>
-                    </div>
-                     <div class="col-sm-6">
-                        Copyright &copy; 2014 Myabuy LLC. 
-                    </div>
-            </div>
-            </div>
-            
-        </footer>
-        
+                                >
+        <p> +1 302-415-1226 </p>
+        <p> <a href="mailto:admin@myabuy.com" class="footer-link">admin@myabuy.com</a> </p>
+      </div>
+    </div>
+  </div>
+</footer>
+<footer class="copyright-new">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6"> <a class="footer-link" href="mailto:admin@myabuy.com">Careers </a>&nbsp;|&nbsp;<a href="#" class="footer-link" >Terms of Service</a> </div>
+      <div class="col-sm-6"> Copyright &copy; 2014 Myabuy LLC. </div>
+    </div>
+  </div>
+</footer>
             
  <!-- Bootstrap core JavaScript  -->
         <script type="text/javascript" src="../themes/landing/js/libs/jquery-1.10.2.js"></script>
