--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -61,8 +61,8 @@
 
   <div class="account-wrapper">
         <div class="account-body">
-            <h3>welcome to 360notion™.</h3>
-            <h5>Please Sign In.</h5>
+            <h3>welcome to 360notion™</h3>
+            <h5>Please Sign In</h5>
 
             <form id="login_form" action="/login" method="POST" class="form account-form" role="form">
                
@@ -103,7 +103,7 @@
 
         <div class="account-footer">
             <p>
-                Don't have an account? &nbsp;
+                Don't have an Account? &nbsp;
                 <a href="/signup">Create an Account!</a>
             </p>
         </div>
