--- a/public/templates/pricing.html
+++ b/public/templates/pricing.html
@@ -137,81 +137,143 @@
 </div>
 <!--footer-->
 
-<footer class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3">
-        <h4 class="title-size text-center"> About Us </h4>
-        <p class="About-Us text-footer text-center"> <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part of. 
-          To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon "></i> <small class="help-block text-center text-footer"> -Joel Goslar, Founder and CEO </small> </p>
-      </div>
-      <div class="col-sm-3">
-        <h4 class="title-size text-center"> Stay Connected </h4>
-        <br>
-        <ul class="footer-social-link text-footer text-center">
-          <li> <a href="https://www.facebook.com/360notion™"
+         <footer class="footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <h4 class="title-size text-center">
+                               About Us
+                            </h4>
+                            <p class="About-Us text-footer text-center">        <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part. 
+                            To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon "></i>
+                            <small class="help-block text-center text-footer">
+                                -Joel Goslar, Founder and CEO
+                            </small> </p>
+                        </div>
+
+                         <div class="col-sm-3">
+                           <h4 class="title-size text-center">
+                              Connect With Us
+                            </h4>
+
+                          
+
+                            <br>
+
+                            <ul class="footer-social-link text-footer text-center">
+                                <li>
+                                    <a href="https://www.facebook.com/360notion™"
                                         target="_blank"
                                         class="ui-tooltip"
                                         title="Facebook"
-                                        data-placement="bottom"> <i class="fa fa-facebook text-footer"></i> </a> </li>
-          <li> <a href="https://twitter.com/360notion™"
+                                        data-placement="bottom">
+                                        <i class="fa fa-facebook text-footer"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/360notion™"
                                         target="_blank"
                                         class="ui-tooltip"
                                         title="Twitter"
-                                        data-placement="bottom"> <i class="fa fa-twitter"></i> </a> </li>
-          <li> <a href="https://pinterest.com/360notion™"
+                                        data-placement="bottom">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://pinterest.com/360notion™"
                                         target="_blank"
                                         class="ui-tooltip"
                                         title="Pinterest"
-                                        data-placement="bottom"> <i class="fa fa-pinterest-square"></i> </a> </li>
-          <li> <a href="https://tumblr.com/360notion™"
+                                        data-placement="bottom">
+                                        <i class="fa fa-pinterest-square"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://tumblr.com/360notion™"
                                         target="_blank"
                                         class="ui-tooltip"
                                         title="tumblr"
-                                        data-placement="bottom"> <i class="fa fa-tumblr"></i> </a> </li>
-        </ul>
-      </div>
-      <div class="col-sm-3">
-        <h4 class="title-size text-center"> Stay Updated </h4>
-        <div class="subscribe-form text-footer text-center">
-          <p >Get emails about new features and future updates.</p>
-          <form id="subscribe_form" action="/subscribe" method="POST" class="form" role="form">
-            <fieldset>
-              <div class="form-group text-center">
-                <input type="text"
+                                        data-placement="bottom">
+                                        <i class="fa fa-tumblr"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="col-sm-3">
+                            <h4 class="title-size text-center">
+                              Stay Updated
+                            </h4>
+
+                            <div class="subscribe-form text-footer text-center">
+                                <p >Join other business visionaries who receive updates on 360notion.com</p>
+
+                                <form id="subscribe_form" action="/subscribe" method="POST" class="form" role="form">
+                                    <fieldset>
+                                        <div class="form-group text-center">
+                                            <input type="text"
                                                 class="form-control validate[required,custom[email]]"
                                                 id="newsletter_email"
                                                 name="newsletter_email"
-                                                placeholder="Email Address">
-              </div>
-              <div class="form-group text-center">
-                <button type="submit" class="btn btn-transparent">Notify me</button>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-        <p class="subscribe-thanks"> Thanks for subscribing! </p>
-      </div>
-      <div class="col-sm-3 text-footer text-center">
-        <h4 class="title-size text-center"> Get In Touch </h4>
-        <p> 1201 Orange St Ste 600 <br>
-          Wilmington, DE 19801 </p
+                                                placeholder="What is your email address?">
+                                        </div>
 
-                                >
-        <p> +1 302-415-1226 </p>
-        <p> <a href="mailto:admin@myabuy.com" class="footer-link">admin@myabuy.com</a> </p>
-      </div>
-    </div>
-  </div>
-</footer>
-<footer class="copyright-new">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6"> <a class="footer-link" href="mailto:admin@myabuy.com">Careers </a>&nbsp;|&nbsp;<a href="#" class="footer-link" >Terms of Service</a> </div>
-      <div class="col-sm-6"> Copyright &copy; 2014 Myabuy LLC. </div>
-    </div>
-  </div>
-</footer>
+                                        <div class="form-group text-center">
+                                            <button type="submit" class="btn btn-transparent">Notify me</button>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div>
+
+                            <p class="subscribe-thanks">
+                                Thanks for subscribing!
+                            </p>
+                        </div>
+
+
+                        <div class="col-sm-3 text-footer text-center">
+                            <h4 class="title-size text-center">
+                               Get In Touch
+                            </h4>
+
+                            
+                                <p>
+                                    
+                                    1201 Orange St Ste 600 <br>
+                                    Wilmington, DE 19801
+                                </p
+
+                                ><p>
+                                 
+                                    +1 302-415-1226
+                                </p>
+
+                                <p>
+                               
+                                    <a href="mailto:admin@myabuy.com" class="footer-link">admin@myabuy.com</a>
+                                </p>
+                          
+                        </div>
+                    </div>
+                </div>
+            </footer>
+
+
+        <footer class="copyright-new">
+            <div class="container">
+                 <div class="row">
+                    <div class="col-sm-6">
+                         <a class="footer-link" href="mailto:admin@myabuy.com">Careers </a>&nbsp;|&nbsp;<a href="#" class="footer-link" >Terms of Service</a>
+                    </div>
+                     <div class="col-sm-6">
+                        Copyright &copy; 2014 Myabuy LLC. 
+                    </div>
+            </div>
+            </div>
+            
+        </footer>
+        
+            
 
 <!-- Bootstrap core JavaScript  --> 
 <script type="text/javascript" src="../themes/landing/js/libs/jquery-1.10.2.js"></script> 
