--- a/public/templates/pwchange.html
+++ b/public/templates/pwchange.html
@@ -95,7 +95,7 @@
                 </form>
         </div>
         <div>
-            know your password? <a href="/login">Please Sign In</a>
+            Know your password? <a href="/login">Please Sign In</a>
         </div>
     </div>
     
