--- a/public/templates/ComposeMessage.html
+++ b/public/templates/ComposeMessage.html
@@ -72,17 +72,47 @@
               <div class="pull-left"> Alerts </div>
             </li>
             <li class="noticebar-empty">
-              <h4 class="noticebar-empty-title">No alerts here.</h4>
-              <p class="noticebar-empty-text">Check out what other makers are doing on Explore!</p>
+              <h4 class="noticebar-empty-title">You have no alerts.</h4>
+              <p class="noticebar-empty-text">See what your colleagues are doing.</p>
             </li>
           </ul>
         </li>
+         <li class="dropdown"> <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
+         
+     
+         <i class="fa fa-user big-font"></i> <span class="navbar-visible-collapsed">&nbsp;Invite new members&nbsp;</span> <span class="badge-plus"><i class="fa fa-plus"></i></span> 
+        </a>
+          <ul class="dropdown-menu noticebar-menu noticebar-hoverable" role="menu">
+            <li class="">
+              <div class=" text-center padding-top"> <h3>Invite More Coworkers</h3></div>
+            </li>
+            <li >
+            <div class="padding">
+              <div class="form-group padding-top">
+                        
+                        <input type="email"
+                            class="form-control validate[required,equals[password]]"
+                            id=""
+                            name=""
+                            placeholder="name@companyemailaddress.com">
+                    </div>
+                    <div class="">
+            <a><i class="fa fa-plus padding remove_icon"></i>Add More Coworkers</a>
+           </div>
+           <div class="btn btn-primary pull-right">Invite</div>
+           </div>
+            </li>
+          </ul>
+        </li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown navbar-profile"> <a class="padding-top-home" href="/dashboard">Home</a> </li>
         <li class="dropdown navbar-profile"> <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:;"> <img src="../themes/landing/img/avatars/avatar-1-xs.jpg" class="navbar-profile-avatar" alt="Profile Picture"> <span class="navbar-profile-label">rod@rod.me &nbsp;</span> <i class="fa fa-caret-down"></i> </a>
           <ul class="dropdown-menu" role="menu">
-            <li> <a href="/dashboard/settings"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
+            <li> <a href="Profile.html"> <i class="fa fa-user"></i> &nbsp;&nbsp;My Profile </a> </li>
+            <li class="divider"></li>
+             <li> <a href="/dashboard/settings"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
             <li class="divider"></li>
             <li> <a href="#" onclick="this.childNodes[0].submit()">
               <form action="/logout" method="POST">
@@ -102,15 +132,11 @@
     <div class="row">
       <div class="col-md-3 col-sm-5">
         <div class="profile-avatar padding-top"> <img src="../themes/landing/img/avatars/avatar-1-lg.jpg" class="profile-avatar-img thumbnail" alt="Profile Picture"> </div>
-        <div>
-          <form class="mainnav-form" role="">
-            <input class="form-control input-md" type="text" placeholder="Add your personal message">
-            <button class="mainnav-form-btn btn-personal-message-post"> Post </button>
-          </form>
+        <div class="text-center">
+          <h5><a href="allfriend.html">123 Coworkers in Your Network</a></h5>
         </div>
-        <div class="list-group padding-top"> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/messages" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="/dashboard/files" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/friends" class="list-group-item {@eq key="/dashboard/friends" value="{url}"}current{/eq}"> <i class="fa fa-group text-sidebar"></i> &nbsp;Friends <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/profile" class="list-group-item {@eq key="/dashboard/profile" value="{url}"}current{/eq}"> <i class="fa fa-user text-sidebar"></i> &nbsp;&nbsp;My Profile <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
+        <div class="list-group padding-top"> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="inbox.html" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="files.html" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a>  </div>
       </div>
-      
       <!--inbox-->
       <div class="col-md-6 col-sm-7 layout-main">
         <div class="pull-right btn-cm"> Compose Message </div>
@@ -150,7 +176,7 @@
                   </div>
                   <div class="form-group">
                     <label form="message">Message</label>
-                    <textarea class="form-control share-widget-textarea" rows="3" placeholder="Compose a mistake-proof message. Click on the button below to turn it into a snap message." tabindex="1"></textarea>
+                    <textarea class="form-control share-widget-textarea" rows="6" placeholder="Compose a mistake-proof message™.  Click on 'Snap Message' button to send it as a snap message. Snap messages will delete 30 seconds after the recipients open them." tabindex="1"></textarea>
                     <div class="row send-message-padding padding-top "> <a> <i class="fa fa-paperclip text-center"></i> &nbsp; Add Files</a></div>
                   </div>
                 </div>
@@ -164,7 +190,7 @@
                     <li class="inline-block">
                       <label>
                         <input type="radio" value="">
-                        <a class="ui-tooltip zindex10" data-toggle="tooltip"data-original-title="Edit or delete the mistakes before the recipients opens them">Standard Message</a> </label>
+                        <a class="ui-tooltip zindex10" data-toggle="tooltip"data-original-title="Edit or delete the mistakes before the recipients opens them">Mistake-free Message™</a> </label>
                     </li>
                   </div>
                   <div class="col-md-4 inline-block">
@@ -210,21 +236,6 @@
             </div>
           </div>
           <a>See All Coworkers</a> </div>
-        <div id="note-box" class="text-center">
-          <h4> To Do List </h4>
-          <div>
-            <p class="text-left"> something to do here something to do here <a class="pull-right time"> &nbsp;2pm 15/9/2012 &nbsp; <i class="fa fa-trash-o"></i> </a> </p>
-          </div>
-          <div>
-            <p class="text-left"> something to do here something to do here <a class="pull-right time"> &nbsp;2pm 15/9/2012 &nbsp; <i class="fa fa-trash-o"></i> </a> </p>
-          </div>
-          <div>
-            <p class="text-left"> something to do here something to do here <a class="pull-right time"> &nbsp;2pm 15/9/2012 &nbsp; <i class="fa fa-trash-o"></i> </a> </p>
-          </div>
-          <div class="padding-top">
-            <p class=" text-right"> <a><i class="fa fa-pencil-square-o"></i>&nbsp;New Note</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
