--- a/public/templates/coworker-Profile.html
+++ b/public/templates/coworker-Profile.html
@@ -133,59 +133,59 @@
         <div class="list-group padding-top"> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="inbox.html" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="files.html" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
       </div>
       <!-- end left sidebar-->
-      <div class="col-md-9 col-sm-8 profile-line-height">
-        <h4 class="title-heading text-center">My Profile</h4>
-        <div class="stream-box">
-          <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
+      <div class="col-md-9 col-sm-8 padding-top-home profile-line-height text-center">
+        <div class="text-center avatar-personal-info"> <img  src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt="Profile Avatar" width="130" height="136"> </div>
+        <h3 class="padding-top">Nikita Williams</h3>
+        <h5 class="text-muted">Visual, UI, UX Designer</h5>
+        <hr>
+        <p> <a class="btn btn-primary" href="javascript:;">Add as Friend</a> <a class="btn btn-primary" href="javascript:;">Send Message</a> </p>
+        <hr>
+        <div class="text-left">
           <h4 class="text-center"> personal information</h4>
-          <div> <b>My Photo:</b> <a></a></div>
-          <div class="avatar-personal-info"> <img src="../themes/landing/img/avatars/avatar-1-lg.jpg" alt="Profile Avatar" width="130" height="136"> </div>
-          <div> <b>about me:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-          <div><b> birthday:</b> g</div>
-          <div> <b>relationship status:</b> </div>
-          <div> <b>location:</b> </div>
+          <div> <b>about me:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.  consectetur adipisicing elit Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
+          <div><b> birthday:</b> 12/12/1912</div>
+          <div> <b>relationship status:</b> Maried</div>
+          <div> <b>location:</b> New York</div>
         </div>
-        <div class="stream-box">
-          <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
+        <hr>
+       <div class="text-left">
           <h4 class="text-center">education</h4>
-          <div> <b>from: &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b> </div>
-          <div> <b>school name:</b></div>
-          <div> <b>degree/diploma:</b></div>
-          <div><b>description:</b></div>
-          <div > <a> <i class="fa fa-plus"></i> add more </a></div>
+          <div> <b>from: </b>2002 <b>&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b>2004 </div>
+          <div> <b>school name:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+          <div> <b>degree/diploma:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+          <div><b>description:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
         </div>
-        <div class="stream-box">
-          <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
+        <hr>
+       <div class="text-left">
           <h4 class="text-center">contact infomation</b></h4>
-          <div><b> work number:  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;ext:</b></div>
+          <div><b> work number: 123434 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;ext:</b></div>
           <div> <b>mobile number:</b></div>
-          <div><b>other email addresses:</b></div>
-          <div><b>home address:</b></div>
+          <div><b>other email addresses:</b>This section or field will not show if the user let it blank</div>
+          <div><b>home address:</b>This section or field will not show if the user let it blank</div>
         </div>
-        <div class="stream-box">
-          <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
+        <hr>
+        <div class="text-left">
           <h4 class="text-center"> company information</h4>
-          <div> <b>job title: </b></div>
+          <div> <b>job title:</b> This section or field will not show if the user let it blank </b></div>
           <div> <b>department:</b></div>
-          <div> <b>skills:</b></div>
+          <div> <b>skills:</b> This section or field will not show if the user let it blank</div>
         </div>
-        <div class="stream-box">
-          <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
+        <hr>
+       <div class="text-left">
           <h4 class="text-center">work experience</h4>
           <div> <b>from: &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b> </div>
-          <div> <b>company name:</b></div>
-          <div> <b>job title:</b></div>
-          <div><b>description:</b></div>
-          <div > <a> <i class="fa fa-plus"></i> add more </a></div>
+          <div> <b>company name:</b>This section or field will not show if the user let it blank</div>
+          <div> <b>job title:</b>This section or field will not show if the user let it blank/div>
+            <div><b>description:</b>This section or field will not show if the user let it blank</div>
+          </div>
         </div>
+        <br class="visible-xs">
       </div>
-      <br class="visible-xs">
+      <!--project--> 
+      
+      <!--end--> 
     </div>
-    <!--project--> 
-    
-    <!--end--> 
   </div>
-</div>
 </div>
 <!-- Bootstrap core JavaScript  --> 
 <script type="text/javascript" src="../themes/admin/js/libs/jquery-1.10.2.min.js"></script> 
