--- a/public/templates/features.html
+++ b/public/templates/features.html
@@ -93,7 +93,7 @@
                         <li>
                             <a href="#mistake-tab" data-toggle="tab">
                             <i class="fa fa-edit"></i> 
-                            &nbsp;&nbsp;Mistake-Proof Messages
+                            &nbsp;&nbsp;Mistake-Proof Messages™
                             </a>
                         </li>
 
@@ -143,7 +143,7 @@
                                 Need to send sensitive data to your colleagues? 
                             </p>
 
-                            <p class="feature-text">360notion™ allows you to send messages a la "Snapchat" to expire them 30 seconds after 
+                            <p class="feature-text">360notion™ allows you to send messages a la "Snapchat®" to expire them 30 seconds after 
                                 being read by the recipient. Snap messages are not stored in our databases to guarantee that 
                                 they don't leave any trace behind. 
                             </p>
@@ -151,7 +151,7 @@
 
                         <div class="tab-pane fade feature-text " id="mistake-tab">
                             <h3 class="content-title">
-                                <strong>Mistake-Proof Messages</strong>
+                                <strong>Mistake-Proof Messages™</strong>
                             </h3>
 
                             <p>
@@ -229,7 +229,7 @@
 
                          <div class="col-sm-3">
                            <h4 class="title-size text-center">
-                                Stay Connected
+                              Connect With Us
                             </h4>
 
                           
@@ -282,7 +282,7 @@
                             </h4>
 
                             <div class="subscribe-form text-footer text-center">
-                                <p >Get emails about new features and future updates.</p>
+                                <p >Join other business visionaries who receive updates on 360notion.com</p>
 
                                 <form id="subscribe_form" action="/subscribe" method="POST" class="form" role="form">
                                     <fieldset>
@@ -291,7 +291,7 @@
                                                 class="form-control validate[required,custom[email]]"
                                                 id="newsletter_email"
                                                 name="newsletter_email"
-                                                placeholder="Email Address">
+                                                placeholder="What is your email address?">
                                         </div>
 
                                         <div class="form-group text-center">
