--- a/public/themes/landing/css/mvpready-landing-new-style.css
+++ b/public/themes/landing/css/mvpready-landing-new-style.css
@@ -843,7 +843,7 @@ p {
 	font-weight: 600;
 }
 .row-divider {
-	margin-top: 10px;
+	margin-top: 15px;
 }
 /* !Icons List */
 /* ----------------------------------------------- */
@@ -868,6 +868,36 @@ p {
 }
 /* !Pricing plans */
 /* ----------------------------------------------- */
+.Checkout-badge-active {
+ padding-right:15px;
+ padding-left:15px;
+  padding-top:10px;
+   padding-bottom:10px;
+   text-align:center;
+	height:40px;
+	width:40px;
+	font-size: 18px;
+	color:#FFF;
+	background-color:#F0AD06;
+	border-radius:10px;
+	line-height:40px;
+
+}
+.Checkout-badge {
+	 padding-right:15px;
+ padding-left:15px;
+  padding-top:10px;
+   padding-bottom:10px;
+   text-align:center;
+	height:40px;
+	width:40px;
+	font-size: 18px;
+	color:#FFF;
+	border-radius:10px;
+	line-height:40px;
+	background-color:#999;
+}
+.billing-form{ min-width:250px; text-align:left; width:70%;}
 .pricing-plan {
 	position: relative;
 	display: block;
